Avoid showing invisible text by adding font-display: swap

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -20,6 +20,7 @@ h2,
 h3,
 nav {
   font-family: "Sawarabi Mincho", serif;
+  font-display: swap;
 }
 
 h1 {
